--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 }
 #main {
     width: 100%;
-    display: inline-flex;
+    display: flex;
     overflow: hidden;
     flex-direction: row;
 }
